Added google ver datetime and link

--- a/blog_1.html
+++ b/blog_1.html
@@ -198,6 +198,10 @@
 
       <div class="credits">
         Designed by <a href="https://www.linkedin.com/in/mayukhmohan/">Mayukh Mukherjee</a>
+		<script>
+         var date = document.lastModified;
+         document.write("Last Modified: "+date);
+		</script>
       </div>
 
     </div>
