--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
+  <meta name="google-site-verification" content="czq-osZ-0zZxpVz9mkPt2-huEjQ4SzyD2U6A4A0SWYg" />
 
 </head>
 
@@ -93,7 +94,7 @@
               <p class="p-heading">Hi! I am a computer science graduate from Indian Institute of Engineering Science & Technology, Shibpur. Currently Working as a Researcher at Tata Research Development and Design Centre Pune(TCS Research and Innovation).</p>
               <p class="separator">I was previously a research intern at TRDDC Pune Software System and Services Team where I explored Deep Reinforcement Learning and Simulation. I also spent my summer 2018 as a software development intern at IIT Bombay working on Drupal and H5P Development to help the content creators to keep track of a users performance.. 
 			  I'm interested in building robust, scalable and interpretable intelligent systems to solve real world problems. Also interested in System Design, BlockChain and CyberSecurity.
-			  You can find my resume here</p>
+			  You can find my resume <a href="https://drive.google.com/file/d/1ssXIzWIVaderch-zHwzZ3fQAjpvcjWIl/view?usp=sharing">here</a></p>
 
             </div>
 
@@ -727,6 +728,10 @@
 
       <div class="credits">
         Designed by <a href="https://www.linkedin.com/in/mayukhmohan/">Mayukh Mukherjee</a>
+		<script>
+         var date = document.lastModified;
+         document.write("Last Modified: "+date);
+		</script>
       </div>
 
     </div>
